manifests/local-stack-helm.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack
  namespace: localstack
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"          
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: localstack
            port:
              number: 4566
